Opened 10 years ago
Closed 10 years ago
#6707 closed bug (fixed)
sleep() apears to have wrong return value
Reported by: | scottmc | Owned by: | phoudoin |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
gnulib test suite test test-sleep fails. Attached is a test program that should check this.
Attachments (1)
Change History (4)
by , 10 years ago
Attachment: | test-sleep.c added |
---|
comment:1 by , 10 years ago
Here's the output I get when running the test program:
~> gcc test-sleep.c -o test-sleep ~> test-sleep pentecost=4320000, remaining = 1002598 test-sleep.c:57: assertion failed Abort Abort ~>
comment:2 by , 10 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
Note:
See TracTickets
for help on using tickets.
this should build with a simple: gcc test-sleep -o test-sleep