sleep() remaining time was returned in microsecond, not second. Fix #6707.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38902 a95241bf-73f2-0310-859d-f6bbb57e9c96